--- a/frontEnd/logIN.html
+++ b/frontEnd/logIN.html
@@ -3,7 +3,7 @@
 <head>
   <title>Login</title>
   <!-- Add Bootstrap CSS -->
-  <link rel="icon" href="logo2.png" type="image/x-icon">
+  <link rel="icon" href="logo.png" type="image/x-icon">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="cssFiles/logIN.css">
@@ -19,6 +19,8 @@
   <div class="container form-container">
     <h1 class="text-center">Login</h1>
     <form id="loginForm">
+      <div class="alert alert-danger d-none" id="error-message"></div>
+
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Email address</label>
         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email" required>
