--- a/frontEnd/logIN.html
+++ b/frontEnd/logIN.html
@@ -3,46 +3,47 @@
 <head>
   <title>Login</title>
   <!-- Add Bootstrap CSS -->
-  <link rel="icon" href="logo.png" type="image/x-icon">
+  <link rel="icon" href="logo2.png" type="image/x-icon">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="cssFiles/logIN.css">
 
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <meta charset="UTF-8">
 </head>
 <body>
-  <div class="container form-container">
+  <div class="container form-container" style="max-width: 500px; padding: 2rem; max-height: 800px;">
     <h1 class="text-center">Login</h1>
     <form id="loginForm">
       <div class="alert alert-danger d-none" id="error-message"></div>
-
-      <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email" required>
-        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+      <div class="input-group mb-3">
+        <span class="input-group-text" id="basic-addon1">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+                <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"></path>
+            </svg>
+        </span>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email" required><br>
       </div>
-      <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Password</label>
+      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+      <div class="input-group mb-3">
+        <span class="input-group-text" id="basic-addon2">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock" viewBox="0 0 16 16">
+                <path d="M8 1a4 4 0 0 0-4 4v3H3a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-4a2 2 0 0 0-2-2h-1V5a4 4 0 0 0-4-4zM4.5 5a3.5 3.5 0 1 1 7 0v3h-7V5zM4 9v4h8V9H4z"></path>
+            </svg>
+        </span>
         <input type="password" class="form-control" id="exampleInputPassword1" name="password" required>
       </div>
-      <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Remember me</label>
+<br>
+      <div class="d-grid">
+        <button type="submit" class="btn btn-primary">logIn</button>
       </div>
-      <button type="submit" class="btn btn-primary">logIn</button>
     </form>
-
+<br>
     <p class="text-center">Don't have an account? <a href="/sigh_up.html" class="btn btn-link">Sign Up</a></p>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
   <script src="jsFiles/logIN.js"></script>
   <script src="jsFiles/darkMode.js"></script>
 
@@ -50,10 +51,9 @@
     <input class="form-check-input" type="checkbox" id="darkModeToggle">
     <label class="form-check-label" for="darkModeToggle">Dark Mode</label>
   </div>
-  
 </body>
 <footer>
-  <p class="copyright">&copy; 2023 Raeed Ataria and Daniel Jarous. All rights reserved.</p>
+  <p class="copyright">&copy; 2024 stock market. All rights reserved.</p>
 </footer>
 
 </html>
