--- a/frontEnd/sigh_up.html
+++ b/frontEnd/sigh_up.html
@@ -61,15 +61,9 @@
   <script src="jsFiles/sigh_up.js"></script>
   <script src="jsFiles/darkMode.js"></script>
 
-  
-  <div class="form-check form-switch">
-    <input class="form-check-input" type="checkbox" id="darkModeToggle">
-    <label class="form-check-label" for="darkModeToggle">Dark Mode</label>
-  </div>
-  
 </body>
 <footer>
-  <p class="copyright">&copy; 2023 Raeed Ataria and Daniel Jarous. All rights reserved.</p>
+  <p class="copyright">&copy; 2024 stock market. All rights reserved.</p>
 </footer>
 
 </html>
